Split between Node for base functionality and Echo, UniqueId

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-files = jepsen_katas/**/*.py
+files = jepsen_katas/**/*.py,tests/**/*.py
 
 allow_incomplete_defs = false
 allow_subclassing_any = false
